{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 628,
  "lineage": "55f6a8ef-606d-a5c3-5dc1-f11cbe69cf63",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "myInstance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0843f7c45354d48b5",
            "arn": "arn:aws:ec2:ca-central-1:143319089234:instance/i-01f4798f5a01b081a",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01f4798f5a01b081a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "adnan-pasic-tf-key-web-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08781d613b69142b2",
            "private_dns": "ip-172-31-9-90.ca-central-1.compute.internal",
            "private_ip": "172.31.9.90",
            "public_dns": "ec2-35-182-163-67.ca-central-1.compute.amazonaws.com",
            "public_ip": "35.182.163.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-011c33900a85d8792",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "adnan-pasic-tf-sg-web-server"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a451572b818de6f7",
            "tags": {
              "Name": "adnan-pasic-tf-ec2-web-server-1"
            },
            "tags_all": {
              "Name": "adnan-pasic-tf-ec2-web-server-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa3ed1ab2e4b4842"
            ]
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0843f7c45354d48b5",
            "arn": "arn:aws:ec2:ca-central-1:143319089234:instance/i-0592ff8e6bb942ac0",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0592ff8e6bb942ac0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "adnan-pasic-tf-key-web-server",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d0223f8d5529a4c2",
            "private_dns": "ip-172-31-1-49.ca-central-1.compute.internal",
            "private_ip": "172.31.1.49",
            "public_dns": "ec2-3-99-220-141.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.99.220.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0385f9e75f06b1b0b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "adnan-pasic-tf-sg-web-server"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a451572b818de6f7",
            "tags": {
              "Name": "adnan-pasic-tf-ec2-web-server-2"
            },
            "tags_all": {
              "Name": "adnan-pasic-tf-ec2-web-server-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fa3ed1ab2e4b4842"
            ]
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:143319089234:loadbalancer/app/adnan-pasic-tf-lb-web-server/973a1860a3a88428",
            "arn_suffix": "app/adnan-pasic-tf-lb-web-server/973a1860a3a88428",
            "desync_mitigation_mode": "defensive",
            "dns_name": "adnan-pasic-tf-lb-web-server-611151110.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:143319089234:loadbalancer/app/adnan-pasic-tf-lb-web-server/973a1860a3a88428",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "adnan-pasic-tf-lb-web-server",
            "security_groups": [
              "sg-0da7b1af0ca80ef03"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a352f599dfe34c0"
              },
              {
                "subnet_id": "subnet-01af2c8ccfbe661ec"
              },
              {
                "subnet_id": "subnet-0a451572b818de6f7"
              }
            ],
            "subnets": [
              "subnet-01a352f599dfe34c0",
              "subnet-01af2c8ccfbe661ec",
              "subnet-0a451572b818de6f7"
            ],
            "tags": {
              "Name": "adnan-pasic-tf-lb-web-server"
            },
            "tags_all": {
              "Name": "adnan-pasic-tf-lb-web-server"
            },
            "vpc_id": "vpc-07fea8cf59ec86f75",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_security_group.sg-lb-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:143319089234:listener/app/adnan-pasic-tf-lb-web-server/973a1860a3a88428/b1d602a56cd3dc55",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:143319089234:targetgroup/adnan-pasic-tf-web-server-tg/2027df4e1d01a9ed",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:143319089234:listener/app/adnan-pasic-tf-lb-web-server/973a1860a3a88428/b1d602a56cd3dc55",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:143319089234:loadbalancer/app/adnan-pasic-tf-lb-web-server/973a1860a3a88428",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb-web-server",
            "aws_lb_target_group.web-server-tg",
            "aws_security_group.sg-lb-web-server"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web-server-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:143319089234:targetgroup/adnan-pasic-tf-web-server-tg/2027df4e1d01a9ed",
            "arn_suffix": "targetgroup/adnan-pasic-tf-web-server-tg/2027df4e1d01a9ed",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 20,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 10,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:143319089234:targetgroup/adnan-pasic-tf-web-server-tg/2027df4e1d01a9ed",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "adnan-pasic-tf-web-server-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07fea8cf59ec86f75"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "web-server-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ca-central-1:143319089234:targetgroup/adnan-pasic-tf-web-server-tg/2027df4e1d01a9ed-20220616180305458100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:143319089234:targetgroup/adnan-pasic-tf-web-server-tg/2027df4e1d01a9ed",
            "target_id": "i-01f4798f5a01b081a"
          },
          "dependencies": [
            "aws_instance.myInstance",
            "aws_lb_target_group.web-server-tg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ca-central-1:143319089234:targetgroup/adnan-pasic-tf-web-server-tg/2027df4e1d01a9ed-20220616180305252200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:143319089234:targetgroup/adnan-pasic-tf-web-server-tg/2027df4e1d01a9ed",
            "target_id": "i-0592ff8e6bb942ac0"
          },
          "dependencies": [
            "aws_instance.myInstance",
            "aws_lb_target_group.web-server-tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-lb-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:143319089234:security-group/sg-0da7b1af0ca80ef03",
            "description": "Allow HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0da7b1af0ca80ef03",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "adnan-pasic-tf-sg-lb-web-server",
            "name_prefix": "",
            "owner_id": "143319089234",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "adnan-pasic-tf-sg-lb-web-server"
            },
            "tags_all": {
              "Name": "adnan-pasic-tf-sg-lb-web-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fea8cf59ec86f75"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg-web-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:143319089234:security-group/sg-0fa3ed1ab2e4b4842",
            "description": "Allow HTTP and SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fa3ed1ab2e4b4842",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "adnan-pasic-tf-sg-web-server",
            "name_prefix": "",
            "owner_id": "143319089234",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "adnan-pasic-tf-sg-web-server"
            },
            "tags_all": {
              "Name": "adnan-pasic-tf-sg-web-server"
            },
            "timeouts": null,
            "vpc_id": "vpc-07fea8cf59ec86f75"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-3062316334",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0fa3ed1ab2e4b4842",
            "self": false,
            "source_security_group_id": "sg-0da7b1af0ca80ef03",
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.sg-lb-web-server",
            "aws_security_group.sg-web-server"
          ]
        }
      ]
    }
  ]
}